Пакрафт. Сверстал блоки team и booking

--- a/Packraft/scss/style.scss
+++ b/Packraft/scss/style.scss
@@ -43,6 +43,8 @@ body, html {
 @import 'service';
 @import 'description';
 @import 'price';
+@import 'booking';
+@import 'team';
 
 @import 'footer';
 
