--- a/Packraft/scss/_paralax.scss
+++ b/Packraft/scss/_paralax.scss
@@ -12,7 +12,10 @@
 	background-size: cover;
 }
 .parallax__1{
-	background-image:linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/fisher.webp");
+	background-image:linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/paralax/paralax_1.webp");
+}
+.parallax__2{
+	background-image:linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/paralax/paralax_2.webp");
 }
 .caption {
   position: absolute;
@@ -24,6 +27,15 @@
   font-size: 52px;
 }
 
+.subCaption{
+  position: absolute;
+  left: 0;
+  top: 67%;
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  font-size: 18px;
+}
 .paralaxIcon{
 	width: 40px;
 	height: 20px;
