--- a/Packraft/style.css
+++ b/Packraft/style.css
@@ -256,7 +256,11 @@ body, html {
 }
 
 .parallax__1 {
-  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/fisher.webp");
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/paralax/paralax_1.webp");
+}
+
+.parallax__2 {
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/paralax/paralax_2.webp");
 }
 
 .caption {
@@ -267,6 +271,16 @@ body, html {
   text-align: center;
   color: #fff;
   font-size: 52px;
+}
+
+.subCaption {
+  position: absolute;
+  left: 0;
+  top: 67%;
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  font-size: 18px;
 }
 
 .paralaxIcon {
@@ -437,6 +451,84 @@ body, html {
   width: 24px;
   height: 24px;
   margin-right: 75px;
+}
+
+.booking {
+  width: 100%;
+  padding: 100px 0;
+  background-color: #ffcd00;
+}
+
+.team {
+  width: 100%;
+  padding: 100px 0 120px;
+}
+
+.team__title {
+  font-size: 52px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.team__description {
+  font-size: 18px;
+  text-align: center;
+  max-width: 570px;
+  margin: 50px auto 80px;
+  line-height: 1.5;
+}
+
+.team__inner {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -30px;
+}
+
+.team__item {
+  width: 25%;
+  margin-bottom: 60px;
+  padding: 0 30px;
+}
+
+.team__photo {
+  display: block;
+  max-width: 135px;
+  height: 135px;
+  border-radius: 50%;
+  margin: 0px auto 20px;
+}
+
+.team__name {
+  margin-bottom: 8px;
+  font-size: 18px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.team__prof, .team__city {
+  margin-bottom: 8px;
+  font-size: 12px;
+  text-align: center;
+}
+
+.team__verticalContainer {
+  margin: 50px 0 100px;
+  text-align: center;
+}
+
+.team__verticalline {
+  display: inline-block;
+  width: 1px;
+  height: 65px;
+  background-color: #000;
+}
+
+.team__addition {
+  margin: 0 auto;
+  max-width: 935px;
+  font-size: 18px;
+  line-height: 1.5;
+  text-align: center;
 }
 
 footer {
