Начал делать блок FAQ

--- a/Packraft/scss/style.scss
+++ b/Packraft/scss/style.scss
@@ -43,9 +43,9 @@ body, html {
 @import 'service';
 @import 'description';
 @import 'price';
+@import 'faq';
 @import 'booking';
 @import 'team';
-
 @import 'footer';
 
 
