--- a/Packraft/scss/_faq.scss
+++ b/Packraft/scss/_faq.scss
@@ -9,7 +9,14 @@
 }
 .faq__item{
 	padding:30px;
+	border-bottom: 2px solid #eeeeee;
+}
+.faq__click{
 	font-size: 18px;
 	font-weight: 700;
-	border-bottom: 2px solid #eeeeee;
+}
+.faq__slide {
+	font-size: 16px;
+	margin-top: 20px;
+    display:none;
 }
