--- a/Packraft/style.css
+++ b/Packraft/style.css
@@ -470,14 +470,32 @@ body, html {
 }
 
 .faq__click {
+  position: relative;
   font-size: 18px;
   font-weight: 700;
+  cursor: pointer;
 }
 
 .faq__slide {
   font-size: 16px;
   margin-top: 20px;
   display: none;
+}
+
+.faq__icon {
+  width: 34px;
+  height: 34px;
+  fill: gray;
+  position: absolute;
+  right: 20px;
+  top: -10px;
+  padding: 5px;
+  border-radius: 50%;
+  transition: transform 1s;
+}
+
+.faq__click:hover .faq__icon {
+  background-color: #F5F5F5;
 }
 
 .booking {
