--- a/DJI/scss/_footer.scss
+++ b/DJI/scss/_footer.scss
@@ -1,5 +1,31 @@
-.footer{
-	height: 200px;
-	width: 100%;
-	background-color: #000;
+footer{
+    background-color: black;
+    padding: 50px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.footer__contacts{
+	font-size: 18px;
+	font-weight: 600;
+	color: white;
+	text-align: center;
+	line-height: 1.6;
+}
+.footer__copyright{
+	font-size: 14px;
+	color: #9A9A9A;
+	text-align: center;
+	line-height: 2;
+	margin-top: 30px;
+}
+.footer__social{
+	text-align: center;
+	margin-top: 65px;
+}
+.social__icon{
+	width: 32px;
+	height: 32px;
+	fill: #fff;
+	margin-left: 10px;
 }
