--- a/DJI/style.css
+++ b/DJI/style.css
@@ -108,10 +108,78 @@ body, html {
   transform: translate3d(-50%, -50%, 0);
 }
 
-.footer {
-  height: 200px;
-  width: 100%;
-  background-color: #000;
+.rent {
+  padding: 100px 0;
+}
+
+.rent__title {
+  font-size: 52px;
+  text-align: center;
+}
+
+.rent__item {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.rent__photo {
+  width: 40%;
+  padding-top: 30%;
+  overflow: hidden;
+  position: relative;
+}
+
+.rent__img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
+  transform: translate3d(-50%, -50%, 0);
+}
+
+.rent__text {
+  width: 50%;
+  padding: 50px 10px;
+  font-size: 24px;
+  line-height: 1.6;
+}
+
+footer {
+  background-color: black;
+  padding: 50px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__contacts {
+  font-size: 18px;
+  font-weight: 600;
+  color: white;
+  text-align: center;
+  line-height: 1.6;
+}
+
+.footer__copyright {
+  font-size: 14px;
+  color: #9A9A9A;
+  text-align: center;
+  line-height: 2;
+  margin-top: 30px;
+}
+
+.footer__social {
+  text-align: center;
+  margin-top: 65px;
+}
+
+.social__icon {
+  width: 32px;
+  height: 32px;
+  fill: #fff;
+  margin-left: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
