--- a/Packraft/scss/_paralax.scss
+++ b/Packraft/scss/_paralax.scss
@@ -21,6 +21,7 @@
   position: absolute;
   left: 0;
   top: 50%;
+  transform: translate(50%);
   width: 100%;
   text-align: center;
   color: #fff;
