Доделал первую страницу проекта Мраморка

--- a/Mramorka/scss/_btn.scss
+++ b/Mramorka/scss/_btn.scss
@@ -4,10 +4,10 @@
 	font-size: 1.6rem;
 	color: #fff;
 	border-radius: 36px;
-	background-color: #1f5bff;
+	background-color: #000;
 	text-decoration: none;
 	font-weight: 600;
 }
-.call__link{
-	text-align: center;
+.btn--blue{
+	background-color: #1f5bff;
 }
