--- a/Mramorka/scss/_call.scss
+++ b/Mramorka/scss/_call.scss
@@ -1,10 +1,14 @@
 .call{
 	width: 100%;
 	height: 560px;
-	background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url('img/call.webp');
+	background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('img/call.jpg');
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
+	padding-top: 165px;
+}
+.call--main{
+	background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url('img/call.webp');
 	padding-top: 95px;
 }
 .call__iner{
@@ -14,8 +18,12 @@
 .call__title{
 	color: #fff;
 	font-size: 4.8rem;
+	font-weight: 700;
 	text-align: center;
 	margin-bottom: 35px;
+}
+.call__title--main{
+	font-weight: 300;
 }
 .call__text{
 	text-align: center;
@@ -24,5 +32,9 @@
 	margin-bottom: 40px;
 }
 .call__link{
+	margin-top: 78px;
 	text-align: center;
+}
+.call__link--main{
+	margin-top: 40px;
 }
