--- a/Mramorka/scss/_intro.scss
+++ b/Mramorka/scss/_intro.scss
@@ -6,12 +6,14 @@
 	position: relative;
 	min-height: 525px; 
 
-	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 
 	background-image:linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/intro.webp");
+}
+.intro__photo--main{
+	background-attachment: fixed;
 }
 
 .intro__caption {
@@ -23,4 +25,27 @@
   color: #fff;
   font-size: 7.2rem;
   transform: translateY(-50%);
+}
+.intro__overlay{
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: rgba(0, 0, 0, .6);
+}
+.intro__overlay--service{
+	background: rgba(0, 0, 0, .3);
+}
+.intro__text{
+	width: 100%;
+	color: #fff;
+	text-align: center;
+	font-size: 7.2rem;
+	font-weight: 600;
+
+	position: absolute;
+  	top: 50%;
+    transform: translateY(-50%);
+	
 }
