--- a/Mramorka/scss/header.scss
+++ b/Mramorka/scss/header.scss
@@ -29,3 +29,21 @@
 	height: 70px;
 
 }
+
+
+.header__logo{
+	font-size: 2.4rem;
+	font-weight: 300;
+	color: #fff;
+}
+.header--2{
+	padding:30px 0;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
+.nav__link--2{
+	color: #fff;
+}
