Мраморка. Начал делать страницу по соревнованиям

--- a/Mramorka/scss/_intro.scss
+++ b/Mramorka/scss/_intro.scss
@@ -37,6 +37,9 @@
 .intro__overlay--service{
 	background: rgba(0, 0, 0, .3);
 }
+.intro__overlay--competition{
+	background: rgba(0, 0, 0, .6);
+}
 .intro__text{
 	width: 100%;
 	color: #fff;
