Мраморка. Начал делать страницу с историей

--- a/Mramorka/scss/style.scss
+++ b/Mramorka/scss/style.scss
@@ -51,3 +51,10 @@ p {
 @import 'service';
 @import 'club';
 @import 'events';
+@import 'sport';
+@import 'card';
+@import 'facts';
+@import 'slk';
+@import 'history';
+
+@import 'galary-1';
