--- a/Mramorka/style.css
+++ b/Mramorka/style.css
@@ -699,4 +699,183 @@ footer {
   font-weight: 600;
 }
 
+.sport {
+  width: 100%;
+  padding: 60px 0;
+  background-color: #efefef;
+}
+
+.sport__title {
+  font-size: 4.2rem;
+  color: #000;
+  font-weight: 600;
+  text-align: center;
+}
+
+.sport__subtitle {
+  font-size: 2.4rem;
+  text-align: center;
+  max-width: 600px;
+  margin: 40px auto 90px;
+  font-weight: 300;
+}
+
+.sport__wraper {
+  max-width: 1160px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.card {
+  width: 31%;
+  height: 520px;
+  background-color: #fff;
+  margin-bottom: 40px;
+  position: relative;
+}
+
+.card__photo {
+  width: 100%;
+}
+
+.card__text {
+  width: 100%;
+  margin-top: 25px;
+  margin-left: 25px;
+}
+
+.card__title {
+  font-size: 2rem;
+  color: #000;
+  font-weight: 600;
+}
+
+.card__subtitle {
+  font-size: 1.4rem;
+  font-weight: 100;
+  margin-top: 10px;
+}
+
+.card__nav {
+  position: absolute;
+  bottom: 25px;
+  left: 25px;
+  margin-top: 30px;
+}
+
+.card__link {
+  display: inline-block;
+  padding: 10px 15px;
+  border: 1px solid black;
+  border-radius: 8px;
+  margin-right: 8px;
+  font-size: 1.3rem;
+  font-weight: 800;
+  color: #000;
+  text-decoration: none;
+}
+
+.card__link--black {
+  color: #fff;
+  background-color: #000;
+}
+
+.facts {
+  padding: 70px 0 0;
+}
+
+.facts__wraper {
+  max-width: 760px;
+  margin: 0 auto;
+}
+
+.facts__item {
+  font-size: 2rem;
+}
+
+.facts__title {
+  color: #000;
+  font-weight: 600;
+  margin-bottom: 45px;
+}
+
+.facts__divider {
+  width: 95%;
+  height: 3px;
+  background-color: #000;
+  margin: 30px 0;
+}
+
+.slk {
+  margin-top: 120px;
+}
+
+.slk__iner {
+  display: flex;
+  max-width: 1200px;
+  padding: 0 15px;
+  margin: 0 auto 50px;
+}
+
+.slk__photo {
+  width: 66.666%;
+}
+
+.slk__text {
+  font-size: 1.6rem;
+  width: 33.333%;
+  padding-left: 30px;
+}
+.slk__text p {
+  margin-bottom: 2rem;
+}
+
+.slk__title {
+  color: #000;
+  font-size: 2.4rem;
+  font-weight: 700;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.slider-nav {
+  margin-top: 10px;
+}
+
+.history__note-1 {
+  font-size: 2rem;
+  max-width: 760px;
+  margin: 120px auto 90px;
+}
+
+.galary-1 {
+  width: 100%;
+  padding: 20px;
+}
+
+.galary-1__top {
+  padding-top: 60%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.galary-1__bottom {
+  margin-top: 20px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.galary-1__item {
+  width: 32.5%;
+  padding-top: 20%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 /*# sourceMappingURL=style.css.map */
